<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Samples</string>
    <string name="title">Title:</string>
    <string name="date">Date:</string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
    <string name="title_activity_notes_list">Notes - List</string>
    <string name="add_note">Add Note</string>
    <string name="delete">Delete</string>
    <string name="title_activity_notes_edit">Notes - Edit</string>
    <string name="title_activity_splash">Splash Screen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_samples_list">Sample Applications</string>
    <string name="title_activity_picture">Camera Sample</string>
    <string name="email">Email</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="title_activity_notification">Notifications Sample</string>
    <string name="about_button_description">About panel, button.</string>
    <string name="title_activity_host_ip">Webserver</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_notes_widget">Notes Widget</string>

</resources>